advanced-block/k8s/chapter-4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  ingressClassName: nginx
  rules:
    - host: app.test
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
